<resources>
    <string name="app_name">Swach Neer</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">SIGN IN</string>
    <string name="email">Email Id</string>
    <string name="register">Register</string>
    <string name="signup">SIGN UP</string>
    <string name="username">Username</string>
    <string name="member_login">Employee Login</string>
    <string name="user_login">User Login</string>
    <string name="Id">AadharId</string>
    <string name="phn">PhoneNumber</string>
    <string name="CheckQuality">CheckQuality</string>
    <string name="Report">Report</string>
    <string name="Turbidity">Turbidity</string>
    <string name="ph">pH</string>
    <string name="temperature">temperature</string>
    <string name="allok">ALL OK!!</string>
    <string name="id">Id</string>
    <string name="location">Location</string>
    <string name="Logout">Sign Out</string>
</resources>
